# k8s-rag-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
.github/workflows/: cd.yml  ci.yml
deploy/helm/rag-assistant/: Chart.yaml  values.yaml
deploy/helm/rag-assistant/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingestion-job.yaml  ingress.yaml  persistentvolumeclaim.yaml  secret.yaml  service.yaml
scripts/: evaluate.py  ingest.py  release.py
src/rag_assistant/: config.py
src/rag_assistant/api/: app.py  dependencies.py  middleware.py  schemas.py
src/rag_assistant/api/routers/: health.py  query.py
src/rag_assistant/evaluation/: ragas_runner.py
src/rag_assistant/generation/: llm_client.py  prompt_builder.py
src/rag_assistant/guardrails/: validator.py
src/rag_assistant/ingestion/: chunker.py  cleaner.py  fetcher.py  indexer.py
src/rag_assistant/retrieval/: embedder.py  retriever.py
tests/: conftest.py
tests/data/: golden_dataset.json
tests/integration/: test_health.py  test_query.py
tests/unit/: test_chunker.py  test_cleaner_and_indexer.py  test_guardrails.py  test_prompt_builder.py  test_retriever.py
